# aa-whatax

./: .gitignore  README.md  RESEARCH.md  TECHNICAL.md  pyproject.toml
whatax/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  decorators.py  forms.py  managers.py  models.py  notifications.py  providers.py  tasks.py  urls.py  views.py
whatax/core/: __init__.py  aggregation.py  config.py  matching.py  money.py  moons.py  pricing.py  tax.py  timeutils.py
whatax/management/commands/: whatax_seed_good_ores.py
whatax/migrations/: 0001_initial.py  0002_remove_miningstructure_eve_moon.py  0003_registeredtoken.py  0004_processednotification.py  0005_flat_discount.py  0006_good_ore_default.py  0007_moon_group.py  0008_alter_balanceadjustment_amount_and_more.py  0009_miningstructure_planned_pop_at.py  0010_view_structures_permission.py  0011_miningstructure_fuel_expires.py  0012_fuel_warning.py  0013_characters_kos.py
whatax/templates/whatax/: _mining_months.html  _staff_subtabs.html  _structure_tables.html  _structure_warnings.html  _tabs.html  admin.html  admin_good_ores.html  admin_groups.html  admin_kos.html  base.html  characters.html  dashboard.html  menuitem.html  period_detail.html  period_player_detail.html  period_unregistered_detail.html  staff.html  (+4 more)
whatax/tests/: test_aggregation.py  test_calc_sentinel.py  test_characters.py  test_dead_detection.py  test_fuel_alerts.py  test_matching.py  test_moons.py  test_player_breakdown.py  test_pricing.py  test_providers.py  test_staff_mining.py  test_staff_payments.py  test_staff_structures.py  test_tasks.py  test_tax_records.py
(+4 files in other folders)
